break out Search into separate child component of Home

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playwrite+ES:wght@100..400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000&display=swap");
+
 body {
   background-color: #fffef3;
 }
