--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,6 +1,6 @@
 .search {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   margin-top: 20px;
 }
@@ -19,6 +19,7 @@
   padding-left: 7px;
   border-radius: 5px;
   border: 1px solid #282c34;
+  margin-bottom: 10px;
 }
 
 .search__submit-button {
