--- a/src/components/Recommendations.css
+++ b/src/components/Recommendations.css
@@ -1,25 +1,41 @@
-.search-results {
-  width: 1200px;
+.recommendations {
+  width: 1000px;
   margin-top: 20px;
 }
 
-.search-results h2 {
+.recommendations__back-button {
+  position: absolute;
+  top: 160px;
+  left: 20px;
+  background-color: #282c34;
+  color: #fffef3;
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 10px 20px;
+  height: 45px;
+  border-radius: 5px;
+  border: 1px solid #282c34;
+}
+
+.recommendations h2 {
   text-align: center;
   color: #282c34;
   font-family: "Nunito", sans-serif;
   margin-bottom: 30px;
 }
 
-.search-results ul {
+.recommendations ul {
   list-style-type: none;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
   padding-bottom: 80px;
 }
 
-.search-results li {
+.recommendations li {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,26 +43,26 @@
   cursor: pointer;
 }
 
-.search-results__poster-container {
+.recommendations__poster-container {
   width: 200px;
   height: 300px;
   overflow: hidden;
   margin-bottom: 10px;
 }
 
-.search-results__poster {
+.recommendations__poster {
   width: 200px;
   height: auto;
   margin-right: 10px;
   border-radius: 5px;
 }
 
-.search-results__info {
+.recommendations__info {
   width: 200px;
   margin-left: 5px;
   font-family: "Nunito", sans-serif;
 }
 
-.search-results__title {
+.recommendations__title {
   font-weight: 800;
 }
