--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -5,10 +5,18 @@
   margin-top: 20px;
 }
 
+.search__blurb {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  font-family: "Nunito", sans-serif;
+}
+
 .search__label {
   margin-right: 10px;
   line-height: 30px;
   font-size: 20px;
+  color: #282c34;
   font-family: "Nunito", sans-serif;
   font-weight: 800;
 }
