--- a/src/components/Recommendations.css
+++ b/src/components/Recommendations.css
@@ -19,6 +19,22 @@
   border: 1px solid #282c34;
 }
 
+.recommendations__new-search-button {
+  position: absolute;
+  top: 160px;
+  left: 210px;
+  background-color: #e6e5db;
+  color: #282c34;
+  font-family: "Nunito", sans-serif;
+  font-weight: 800;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 10px 20px;
+  height: 45px;
+  border-radius: 5px;
+  border: 1px solid #282c34;
+}
+
 .recommendations h2 {
   text-align: center;
   color: #282c34;
