--- a/src/components/Recommendations.css
+++ b/src/components/Recommendations.css
@@ -3,36 +3,29 @@
   margin-top: 20px;
 }
 
-.recommendations__back-button {
+.recommendations__button {
   position: absolute;
   top: 160px;
-  left: 20px;
   padding: 10px 20px;
   height: 45px;
   border: 1px solid #282c34;
   border-radius: 5px;
-  background-color: #282c34;
-  color: #fffef3;
   font-family: "Nunito", sans-serif;
   font-weight: 800;
   font-size: 16px;
   cursor: pointer;
 }
 
+.recommendations__back-button {
+  left: 20px;
+  background-color: #282c34;
+  color: #fffef3;
+}
+
 .recommendations__new-search-button {
-  position: absolute;
-  top: 160px;
   left: 210px;
-  padding: 10px 20px;
-  height: 45px;
-  border: 1px solid #282c34;
-  border-radius: 5px;
   background-color: #e6e5db;
   color: #282c34;
-  font-family: "Nunito", sans-serif;
-  font-weight: 800;
-  font-size: 16px;
-  cursor: pointer;
 }
 
 .recommendations h2 {
